force-app/main/default/objects/Form_Page__c/Form_Page__c.object-meta.xml
<CustomObject>
    <label>Form Page</label>
    <nameField>
        <label>Form_Page Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Form_Pages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>