force-app/main/default/objects/Form_Page__c/fields/AllField_Styling__c.field-meta.xml
<CustomField>
    <fullName>AllField_Styling__c</fullName>
    <label>AllField_Styling</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>