force-app/main/default/objects/Form_Page__c/fields/Form__c.field-meta.xml
<CustomField>
    <fullName>Form__c</fullName>
    <label>Form</label>
    <referenceTo>Form__c</referenceTo>
    <relationshipLabel>Form_Pages</relationshipLabel>
    <relationshipName>Form_Pages</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>