force-app/main/default/objects/Form_Page__c/fields/Page_Number__c.field-meta.xml
<CustomField>
    <fullName>Page_Number__c</fullName>
    <label>Page_Number</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>