force-app/main/default/objects/Form_Page__c/fields/Page_Styling__c.field-meta.xml
<CustomField>
    <fullName>Page_Styling__c</fullName>
    <label>Page_Styling</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>